--- a/C#.NET Demo/做控件 WPF Winform 前端绘制本质 WEB框架和组件/App.xaml
+++ b/C#.NET Demo/做控件 WPF Winform 前端绘制本质 WEB框架和组件/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:做控件_WPF_Winform_前端绘制本质_WEB框架和组件"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Window2.xaml">
     <Application.Resources>
          
     </Application.Resources>
