学习Blazor的Demo项目

--- a/C#.NET Demo/BlazorClient2/BlazorOfficialDemo/BlazorApp/Pages/Todo.razor
+++ b/C#.NET Demo/BlazorClient2/BlazorOfficialDemo/BlazorApp/Pages/Todo.razor
@@ -36,6 +36,11 @@
          var todoItem = new TodoItem();
          todoItem.Title = title;
          todos.Add(todoItem);
+
+         if(string.IsNullOrEmpty(todoItem.Title))
+         {
+             todoItem.Title = "NewTitle";
+         }
     }
 
     public class TodoItem
